--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -8,8 +8,8 @@
       "name": "Python: Current File",
       "type": "python",
       "request": "launch",
-      "cwd": "${workspaceFolder}/src",
-      "program": "${workspaceFolder}/src/main.py",
+      "cwd": "${workspaceFolder}",
+      "program": "${workspaceFolder}/main.py",
       "args": [],
       "stopAtEntry": false,
       "console": "integratedTerminal",
