--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,7 @@
 coverage==7.3.2
 imutils==0.5.4
-numpy==1.26.1
+numpy==1.26.4
 opencv-python==4.8.1.78
 pillow==10.3.0
+tensorflow==2.18.0
 zwoasi==0.2.0
